fix dashboard alignment

--- a/src/features/Dashboard/Dashboard.scss
+++ b/src/features/Dashboard/Dashboard.scss
@@ -79,8 +79,6 @@
       justify-content: stretch;
 
       > div {
-        flex: 1;
-        display: flex;
         justify-content: center;
         flex-direction: column;
       }
